added files to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-local-weather-app.html
+getgiphy.html
+pomodoro-timer.html
+quicksand-photography.html
+rpg-game.html
+trivia-game.html
+word-guess-game.html
